--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,55 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "api/index.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "public/**/*",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/public/$1"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/login",
+      "dest": "/public/login.html"
+    },
+    {
+      "src": "/dashboard",
+      "dest": "/public/user-dashboard.html"
+    },
+    {
+      "src": "/admin",
+      "dest": "/public/admin.html"
+    },
+    {
+      "src": "/event-management",
+      "dest": "/public/event-management.html"
+    },
+    {
+      "src": "/manage-event/(.*)",
+      "dest": "/public/manage-event.html"
+    },
+    {
+      "src": "/user-management",
+      "dest": "/public/user-management.html"
+    },
+    {
+      "src": "/selection-round-list",
+      "dest": "/public/selection-round-list.html"
+    },
+    {
+      "src": "/selection-round/(.*)",
+      "dest": "/public/selection-round.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
+  ]
+}
