--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -11,9 +12,13 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-session-knex": "^5.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-mysql-session": "^3.0.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.10.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "vercel": "^32.3.0"
   }
 }
